add class Flat with some function

--- a/main.ipynb
+++ b/main.ipynb
@@ -14,28 +14,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "a3ebdc30-eb93-4426-8430-2669b652721b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def class flat():\n",
-    "    "
+    "class Flat:\n",
+    "    '''\n",
+    "    Класс квартиры с её параметрами \n",
+    "    '''\n",
+    "    def __init__(self, url, **kwargs):\n",
+    "        self.url = url\n",
+    "        self.price = 0\n",
+    "        self.area = 0\n",
+    "        self.price_sq = self.price/self.area\n",
+    "        self.rooms = 1\n",
+    "        self.bathroom = 'не определено'\n",
+    "        self.age = 'не определено'\n",
+    "        self.house_type = 'не определено'\n",
+    "        self.description = ''\n",
+    "\n",
+    "\n",
+    "    def get_data(self):\n",
+    "        soup = BeautifulSoup(requests.get(self.url).text, 'lxml')\n",
+    "\n",
+    "\n",
+    "                price = \n",
+    "        for quote in soup.find_all('div', {\"data-testid\": \"price-amount\"}):\n",
+    "            self.price = int(''.join(quote.get_text(strip=True).split()[:-1]))\n",
+    "\n",
+    "\n",
+    "        param_dict = {}\n",
+    "        for quote in soup.find_all('tr', {\"data-name\": \"OfferSummaryInfoItem\"}):\n",
+    "        pair = []\n",
+    "        for pos in quote.find_all('td', {}):\n",
+    "            pair.append(pos.get_text(strip=False))\n",
+    "        param_dict[pair[0]] = pair[1]\n",
+    "        \n",
+    "        param_dict\n",
+    "\n",
+    "           \n",
+    "        for quote in soup.find_all('div', {\"data-name\": \"Description\"}):\n",
+    "            self.description += quote.get_text(strip=True).replace('\\n', '; ')\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "\n",
+    "    def to_df(self):\n",
+    "        return pd.DataFrame({\n",
+    "            'Статус объекта': '+',\n",
+    "            'Ссылка на объект недвижимости': self.url,\n",
+    "            'Цена': self.price,\n",
+    "            'Общая площадь': self.area,\n",
+    "            'Цена за квадрат': self.price_sq,\n",
+    "            'Число изолированных комнат': self.rooms,\n",
+    "            'Санузел': self.bathroom,\n",
+    "            'Ближайшее метро': 'названии локации',\n",
+    "            'Время в пути до ближайшего метро': 'мин',\n",
+    "            'До универа (по всем метро)': 'мин',\n",
+    "            'До работы (по всем метро)': 'мин',\n",
+    "            'Доступность': 'формула',\n",
+    "            'Необходимость ремонта': 'категория',\n",
+    "            'Год постройки дома': self.age,\n",
+    "            'Тип дома': self.house_type,\n",
+    "            'Другой удорожающий фактор (в руб.)': 0,\n",
+    "            'Расчетная стоимость': 'категория',\n",
+    "            'Необходимость ремонта': 'категория',\n",
+    "            'Необходимость ремонта': 'категория',\n",
+    "        })\n",
+    "        \n",
+    "    \n",
+    "repair_category = {\n",
+    "    'Малый косметический': 5000,\n",
+    "    'Частичный косметический': 7500,\n",
+    "    'Полный косметический': 10000,\n",
+    "    'Малый капитальный': 20000,\n",
+    "    'Частичный капитальный': 25000,\n",
+    "    'Полный капитальный': 35000,\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "metro_to_me = pd.DataFrame({\n",
+    "    'Университет': [],\n",
+    "    'Новокузнецкая': [],\n",
+    "})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 77,
    "id": "53663e83-7098-4d72-9994-a0d435eeb11a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# url = 'https://www.cian.ru/sale/flat/300940845/'\n",
-    "\n",
-    "\n",
     "# list of urls to cian flat\n",
     "urls = [\n",
-    "    'https://www.cian.ru/sale/flat/303370835/'\n",
+    "    'https://www.cian.ru/sale/flat/300940845/'\n",
     "]"
    ]
   },
@@ -46,14 +121,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get(url)\n",
-    "soup = BeautifulSoup(response.text, 'lxml')"
+    "for url in urls:\n",
+    "    tmp_flat = Flat(url)\n",
+    "    tmp_flat.get_data()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "c6276914-2dc2-48e5-9bfc-f6afb5ef5cbc",
+   "execution_count": 82,
+   "id": "d024461e-b3c7-49d3-b5c5-82556e122d99",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +153,7 @@
        " 'Аварийность': 'Нет'}"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +165,7 @@
     "    for pos in quote.find_all('td', {}):\n",
     "        pair.append(pos.get_text(strip=False))\n",
     "    param_dict[pair[0]] = pair[1]\n",
-    "\n",
+    "    \n",
     "param_dict"
    ]
   },
@@ -144,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 86,
    "id": "ebfe37fd-1650-474c-b79c-de76a0faf4e0",
    "metadata": {},
    "outputs": [
@@ -152,14 +229,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14 900 000 ₽\n"
+      "13300000\n"
      ]
     }
    ],
    "source": [
-    "price = \n",
+    "price = 0\n",
     "for quote in soup.find_all('div', {\"data-testid\": \"price-amount\"}):\n",
-    "    print(quote.get_text(strip=True))"
+    "    print(''.join(quote.get_text(strip=True).split()[:-1]))"
    ]
   },
   {
