class improved, but price per area unit isnt calculated

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "a89a95d1-4e8d-4a23-aa8a-a495e1b2d5d6",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 24,
    "id": "a3ebdc30-eb93-4426-8430-2669b652721b",
    "metadata": {},
    "outputs": [],
@@ -27,35 +27,45 @@
     "        self.url = url\n",
     "        self.price = 0\n",
     "        self.area = 0\n",
-    "        self.price_sq = self.price/self.area\n",
     "        self.rooms = 1\n",
     "        self.bathroom = 'не определено'\n",
-    "        self.age = 'не определено'\n",
+    "        self.age = 0\n",
     "        self.house_type = 'не определено'\n",
-    "        self.description = ''\n",
+    "        self.description = 'не определено'\n",
+    "        self.repair_state = 'не определено'\n",
+    "\n",
+    "    @property\n",
+    "    def area_calc(self):\n",
+    "        if self.area == 0: \n",
+    "            self.price_sq = 0 \n",
+    "        else:\n",
+    "            self.price_sq = self.price/self.area\n",
     "\n",
     "\n",
     "    def get_data(self):\n",
     "        soup = BeautifulSoup(requests.get(self.url).text, 'lxml')\n",
-    "\n",
-    "\n",
-    "                price = \n",
+    "        \n",
     "        for quote in soup.find_all('div', {\"data-testid\": \"price-amount\"}):\n",
     "            self.price = int(''.join(quote.get_text(strip=True).split()[:-1]))\n",
     "\n",
+    "        for quote in soup.find_all('div', {\"data-name\": \"Description\"}):\n",
+    "            self.description += quote.get_text(strip=True).replace('\\n', '; ')\n",
     "\n",
     "        param_dict = {}\n",
     "        for quote in soup.find_all('tr', {\"data-name\": \"OfferSummaryInfoItem\"}):\n",
-    "        pair = []\n",
-    "        for pos in quote.find_all('td', {}):\n",
-    "            pair.append(pos.get_text(strip=False))\n",
-    "        param_dict[pair[0]] = pair[1]\n",
-    "        \n",
-    "        param_dict\n",
+    "            pair = []\n",
+    "            for pos in quote.find_all('td', {}):\n",
+    "                pair.append(pos.get_text(strip=False))\n",
+    "            param_dict[pair[0]] = pair[1]\n",
     "\n",
-    "           \n",
-    "        for quote in soup.find_all('div', {\"data-name\": \"Description\"}):\n",
-    "            self.description += quote.get_text(strip=True).replace('\\n', '; ')\n",
+    "        self.area = param_dict.get('Общая площадь', 0)\n",
+    "        self.bathroom = param_dict.get('Санузел', 'не определено')\n",
+    "        self.age = param_dict.get('Год постройки', 0)\n",
+    "        self.repair_state = param_dict.get('Ремонт', 'не определено')\n",
+    "        self.house_type = param_dict.get('Тип дома', 'не определено')\n",
+    "        return None\n",
+    "        \n",
+    "        \n",
     "        \n",
     "        \n",
     "\n",
@@ -79,9 +89,9 @@
     "            'Тип дома': self.house_type,\n",
     "            'Другой удорожающий фактор (в руб.)': 0,\n",
     "            'Расчетная стоимость': 'категория',\n",
-    "            'Необходимость ремонта': 'категория',\n",
-    "            'Необходимость ремонта': 'категория',\n",
-    "        })\n",
+    "            'Необходимость ремонта': self.repair_state,\n",
+    "            'Полное описание': self.description            \n",
+    "        }, index=[0])\n",
     "        \n",
     "    \n",
     "repair_category = {\n",
@@ -103,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 25,
    "id": "53663e83-7098-4d72-9994-a0d435eeb11a",
    "metadata": {},
    "outputs": [],
@@ -116,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "d05a0b3f-0491-49f7-a57f-0aff10027305",
    "metadata": {},
    "outputs": [],
@@ -125,6 +135,29 @@
     "    tmp_flat = Flat(url)\n",
     "    tmp_flat.get_data()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0a301ade-e6b2-4ecd-8b10-714d30d5db3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Flat' object has no attribute 'price_sq'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tmp_flat\u001b[38;5;241m.\u001b[39mto_df()\n",
+      "Cell \u001b[1;32mIn[24], line 58\u001b[0m, in \u001b[0;36mFlat.to_df\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mto_df\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m     53\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m pd\u001b[38;5;241m.\u001b[39mDataFrame({\n\u001b[0;32m     54\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mСтатус объекта\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m+\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     55\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mСсылка на объект недвижимости\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39murl,\n\u001b[0;32m     56\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mЦена\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprice,\n\u001b[0;32m     57\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mОбщая площадь\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39marea,\n\u001b[1;32m---> 58\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mЦена за квадрат\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprice_sq,\n\u001b[0;32m     59\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mЧисло изолированных комнат\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrooms,\n\u001b[0;32m     60\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mСанузел\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbathroom,\n\u001b[0;32m     61\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mБлижайшее метро\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mназвании локации\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     62\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mВремя в пути до ближайшего метро\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mмин\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     63\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mДо универа (по всем метро)\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mмин\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     64\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mДо работы (по всем метро)\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mмин\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     65\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mДоступность\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mформула\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     66\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mНеобходимость ремонта\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mкатегория\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     67\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mГод постройки дома\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mage,\n\u001b[0;32m     68\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mТип дома\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhouse_type,\n\u001b[0;32m     69\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mДругой удорожающий фактор (в руб.)\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m0\u001b[39m,\n\u001b[0;32m     70\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mРасчетная стоимость\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mкатегория\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     71\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mНеобходимость ремонта\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrepair_state,\n\u001b[0;32m     72\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mПолное описание\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdescription            \n\u001b[0;32m     73\u001b[0m     }, index\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m0\u001b[39m])\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Flat' object has no attribute 'price_sq'"
+     ]
+    }
+   ],
+   "source": [
+    "tmp_flat.to_df()"
    ]
   },
   {
